--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ workflows:
       - aws-eks/update-container-image:
           cluster-name: MyEKSCluster
           resource-name: deployment/backend-feed
-          container-image-updates: "backend-feed=flauberjp/udagram-api-feed"
-          tag: "0.1.$CIRCLE_BUILD_NUM"
+          container-image-updates: "backend-feed=flauberjp/udagram-api-feed:0.1.15"
+          #tag: "0.1.$CIRCLE_BUILD_NUM"
           requires:
             - my-job
