using $CIRCLE_BUILD_NUM directly

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           version: 20.10.14
           docker_layer_caching: true
       - run: |
-          docker build -t flauberjp/udagram-api-feed:0.1.$CIRCLE_BUILD_NUM -t flauberjp/udagram-api-feed:latest .
+          docker build -t flauberjp/udagram-api-feed:$CIRCLE_BUILD_NUM -t flauberjp/udagram-api-feed:latest .
           echo $DOCKER_PASSWORD | docker login -u flauberjp --password-stdin
           docker push flauberjp/udagram-api-feed --all-tags
       - aws-eks/update-kubeconfig-with-authenticator:
@@ -34,7 +34,7 @@ workflows:
       - aws-eks/update-container-image:
           cluster-name: MyEKSCluster
           resource-name: deployment/backend-feed
-          container-image-updates: "backend-feed=flauberjp/udagram-api-feed:0.1.15"
-          #tag: "0.1.$CIRCLE_BUILD_NUM"
+          container-image-updates: "backend-feed=flauberjp/udagram-api-feed"
+          tag: "echo ${CIRCLE_BUILD_NUM}"
           requires:
             - my-job
