--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,6 @@ workflows:
           cluster-name: MyEKSCluster
           resource-name: deployment/backend-feed
           container-image-updates: "backend-feed=flauberjp/udagram-api-feed"
-          tag: "echo ${CIRCLE_BUILD_NUM}"
+          tag: "${CIRCLE_BUILD_NUM}"
           requires:
             - my-job
