--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
           version: 20.10.14
           docker_layer_caching: true
       - run: |
-          docker build -t flauberjp/udagram-api-feed:$pipeline.number -t flauberjp/udagram-api-feed:latest .
+          docker build -t flauberjp/udagram-api-feed:<< pipeline.number >> -t flauberjp/udagram-api-feed:latest .
           echo $DOCKER_PASSWORD | docker login -u flauberjp --password-stdin
           docker push flauberjp/udagram-api-feed --all-tags
       - aws-eks/update-kubeconfig-with-authenticator:
@@ -31,6 +31,6 @@ workflows:
       - aws-eks/update-container-image:
           cluster-name: MyEKSCluster
           resource-name: deployment/backend-feed
-          container-image-updates: "backend-feed=flauberjp/udagram-api-feed:${pipeline.number}"
+          container-image-updates: "backend-feed=flauberjp/udagram-api-feed:<< pipeline.number >>"
           requires:
             - my-job
