--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,20 +7,18 @@ orbs:
 
 jobs:
   my-job:
-    parameters:
-      docker_image_tag:
-        type: integer
     docker:
       - image: cimg/base:stable
         auth:
           username: flauberjp
           password: $DOCKER_PASSWORD # context / project UI env-var reference
     steps:
+      - checkout
       - setup_remote_docker:
           version: 20.10.14
           docker_layer_caching: true
       - run: |
-          docker build -t flauberjp/udagram-api-feed:<< parameters.docker_image_tag >> -t flauberjp/udagram-api-feed:latest .
+          docker build -t flauberjp/udagram-api-feed:<< pipeline.number >> -t flauberjp/udagram-api-feed:latest .
           echo $DOCKER_PASSWORD | docker login -u flauberjp --password-stdin
           docker push flauberjp/udagram-api-feed --all-tags
       - aws-eks/update-kubeconfig-with-authenticator:
@@ -30,8 +28,7 @@ jobs:
 workflows:
   my-workflow:
     jobs:
-      - my-job:
-          docker_image_tag: << pipeline.number >>
+      - my-job
       - aws-eks/update-container-image:
           cluster-name: MyEKSCluster
           resource-name: deployment/backend-feed
